--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,4 @@
-body {
-    font-size: 18px;
-    line-height: 1.5;
-
-}
-
-header, nav, main, footer {
-    margin: 1.25rem auto;
-}
-
-header {
-    background-color: navy;
-    color: #fff;
-    text-align: center; 
-    padding: 1.5rem;
-}
-
 img {
-    size: 20%;
+    width: 10%;
 }
+
