--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,19 @@
 img {
-    width: 10%;
+    grid-template-rows: auto;
+    grid-row: 1;
+    grid-column: 1;
+    width: 8%;
+
+}
+
+header {
+    background-color: rgb(75, 17, 17);
+}
+
+.Name {
+    grid-template-rows: auto;
+    grid-row: 1;
+    grid-column: 2;
+    color: white;
 }
 
