--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,86 @@
-img {
-    grid-template-rows: auto;
-    grid-row: 1;
-    grid-column: 1;
-    width: 8%;
-
+html {
+    background-color: white;
 }
 
 header {
+    display: flex;
+    align-items: center;
     background-color: rgb(75, 17, 17);
+    border-radius: 2em; 
+    box-shadow: 0px 0px 30px;
+    margin-top: 2em; 
+    
+    
 }
 
-.Name {
-    grid-template-rows: auto;
-    grid-row: 1;
-    grid-column: 2;
+
+img {
+    max-width: 100%;
+    height: auto;
+    margin: 35px;
+    border-radius: 2em;
+    box-shadow: 0px 0px 20px;
+}
+
+
+h1 {
+    color: white; 
+    font-size: 40px;
+    
+}
+
+body {
+    max-width: 800px;
+    margin:auto;
+    font-family: 'Barlow', 'sans-serif';
+    font-size: 16px;
+    
+}
+main{
+    display: flex;
+    flex-direction: column;
+    
+    border-radius: 3em;
+
+}
+
+nav {
+    
+}
+
+h2 {
+    border-bottom: 1px solid;
+    font-size: 35px;
+    
+}
+
+
+p {
+    font-size: 25px;
+}
+
+
+.dis {
+    font-size: 20px;
+    border-top: 1px solid;
+}
+
+
+footer{
+    display: grid;
+    background-color: rgb(75, 17, 17);
+    margin-top: 2em;
+    padding: 25px;
+    border-radius: 2em;
+    text-align: center;
     color: white;
+    font-size: 20px;
+    box-shadow: 0px 0px 20px black;
+}
+
+
+.update{
+    font-size: 16px;
+    color: yellow
 }
 
