--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,4 +1,10 @@
-@media only screen and (min-width: 64em) {
-header 
-    margin: 24pt;
+@media only screen and (min-width: 780px) {
+
+    main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
+
+
 }
