--- a/lesson3/css/main.css
+++ b/lesson3/css/main.css
@@ -24,7 +24,7 @@ img{
 
 header{
     display: grid;
-    grid-template-columns: 300px, auto;
+    grid-template-columns: 300px auto;
     justify-content: left;
     align-items: center;
     background-color: #af4e4e; 
