--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -19,7 +19,7 @@ header{
 	padding: 30px;
 	font-size: 25px;
 	font-weight: 400;
-	color: rgb(32, 32, 32);
+	color: #1a1919;
 }
 
 .title{
@@ -96,26 +96,96 @@ h2{
 	margin-right: 0;
 }
 
-.event, .weather, .join, .news{
+.event, .join, .news{
 	border: 1px solid;
 	border-color: rgb(196, 196, 196);
-	background-color: rgb(238, 238, 238);
+	background-color: #af4e4e;
 	padding: 1rem;
 	
 }
 
 .hero{
-	background-image: url("chamber/images/westvalleypic_edited.jpg");
+	text-align: center;
+	position: relative;
+    grid-row: 1;
+}
 
-	grid-row: 1;
+picture img {
+	width: 100%;
+	height: 100%;
+}
+
+.welcome {
+	position: absolute;
+	top: 40px;
+	left: 50px;
+	font-size: xx-large;
+	font-weight: 800;
+}
+
+.joinchamber {
+	position: absolute;
+	top: 150px;
+	right: 30px;
+	background: radial-gradient(#eee, rgb(252, 118, 118));
+	border: 1px solid;
+	border-radius: 10px;
+	padding: 1.5rem;
+	opacity: 0.9;
+	font-size: larger;
+	font-weight: bold;
 }
 
 .event{
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
     grid-row: 2;
 }
 
+.eventTitle {
+	font-size: large;
+	font-weight: bolder;
+	padding: 10px;
+	font-style: italic;
+}
+
+.eventDes {
+	font-size: 16px;
+	font-weight: bold;
+	padding: 20px;
+	font-style: italic;
+	background-color: #863b3b;
+}
+
+.westfestlogo{
+	width: 60px;
+	height: auto;
+	padding: 5px;
+}
+
+
 .weather{
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
     grid-row: 3;
+	background-color: #222222;
+	
+}
+
+.weatherTitle{
+	padding: 20px;
+	font-weight: bolder;
+	font-size: large;
+	font-style: italic;
+}
+
+.wvcweather {
+	width: 80%;
+	height: auto;
 }
 
 .news{
@@ -129,7 +199,7 @@ h2{
 	grid-row: 5/7;
 	border: 1px solid;
 	border-color: rgb(196, 196, 196);
-	background-color: rgb(238, 238, 238);
+	background-color: #af4e4e;
 	padding: 20px;
 	
 }
@@ -137,8 +207,8 @@ h2{
 .spotlight1, .spotlight2, .spotlight3{
 	height: auto;
 	border: 1px solid;
-	border-color: rgb(196, 196, 196);
-	background-color: rgb(238, 238, 238);
+	border-color: #af4e4e;
+	background-color: #863b3b;
 	padding: 1rem;
 }
 
@@ -149,6 +219,8 @@ h2{
 .join{
     display: none;
 }
+
+
 
 
 /* -------Nav CSS-------- */
@@ -170,7 +242,7 @@ nav {
 }
 .navigation a {
 	display: block;
-	padding: 5px;
+	padding: 8px;
 	text-align: left;
 	text-decoration: none;
 	color: black;
@@ -182,9 +254,10 @@ nav {
 
 .navigation a:hover {
 	color: white;
-	background-color: #863b3b;
+	background-color: #af4e4e;
 	border-radius: 20px;
 }	
+
 
 .responsive li {
 	display: block;
