--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -149,6 +149,7 @@ picture img {
 	font-weight: bolder;
 	padding: 10px;
 	font-style: italic;
+	background-color: #eee;
 }
 
 .eventDes {
@@ -173,6 +174,7 @@ picture img {
 	text-align: center;
     grid-row: 3;
 	background-color: #222222;
+	padding: 20px;
 	
 }
 
@@ -181,6 +183,7 @@ picture img {
 	font-weight: bolder;
 	font-size: large;
 	font-style: italic;
+	background-color: #eee;
 }
 
 .wvcweather {
@@ -189,13 +192,30 @@ picture img {
 }
 
 .news{
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
     grid-row: 4;
 }
 
+.newsTitle1{
+	font-style: italic;
+	padding: 1em;
+	background-color: #eee;
+}
+
+.newsTitle2{
+	font-style: italic;
+	font-size: larger;
+	padding: 1em;
+}
 
 
 .spotlightbox{
 	display: grid;
+	justify-content: center;
+	align-items: center;
 	grid-row: 5/7;
 	border: 1px solid;
 	border-color: rgb(196, 196, 196);
@@ -205,11 +225,81 @@ picture img {
 }
 
 .spotlight1, .spotlight2, .spotlight3{
-	height: auto;
+	width: 450px;
+	height: 200px;
 	border: 1px solid;
 	border-color: #af4e4e;
 	background-color: #863b3b;
 	padding: 1rem;
+}
+
+.recpic{
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	
+}
+
+.spot1Des{
+	position: absolute;
+	padding: 20px;
+	font-size: larger;
+	font-style: italic;
+	text-shadow: 0 0 10px #0e0e0e;
+	color: #eee;
+	box-shadow: 0 0 50px #0e0e0e;
+	background-color: #863b3b81;
+}
+
+.spotlight2 {
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.spot2Des{
+	padding: 20px;
+	font-size: larger;
+	font-style: italic;
+	text-shadow: 0 0 10px #0e0e0e;
+	color: #eee;
+	box-shadow: 0 0 50px #0e0e0e;
+	background-color: #863b3b81;
+}
+
+.webdev{
+	width: 64px;
+	height: 64px;
+	padding: 20px;
+}
+
+.spotlight3 {
+	display: block;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.spot3Des{
+	padding: 20px;
+	font-size: larger;
+	font-style: italic;
+	text-shadow: 0 0 10px #0e0e0e;
+	color: #eee;
+	box-shadow: 0 0 50px #0e0e0e;
+	background-color: #863b3b81;
+}
+
+.woodshop{
+	width: 64px;
+	height: 64px;
+	padding: 20px;
+}
+
+.contactinfo{
+	font-style: italic;
+	border-top: 1px solid #000;
 }
 
 .spotlightbox div:nth-child(3){
