Small update to the footer and some of the css

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -9,7 +9,7 @@
 		background-color: #863b3b;
 		border: 1px solid #863b3b;
 		border-radius: 10px;
-		padding: -1em;
+		padding: .1em;
 	}
 
 	#greetbanner{
