--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -82,6 +82,11 @@ footer{
 
 .f_heading1{
 	text-align: center;
+	font-size: medium;
+}
+
+.footerDes{
+	font-size: medium;
 }
 
 h2{
@@ -98,6 +103,7 @@ h2{
 	padding: 15px;
 	border-top: 1px solid;
 	border-color: #0e0e0e;
+	font-size: small;
 }
 
 
