--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -12,13 +12,13 @@
 		padding: .1em;
 	}
 
+
+	.mainpic {
+		width: 100%;
+		margin: auto;
+	}
 	#greetbanner{
 		font-size: larger;
-	}
-
-
-	body{
-		object-fit: contain;
 	}
 
 	.navigation li {
@@ -56,7 +56,6 @@
 	.wrapper{
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(3, 300px);
-		margin: 1.75em;
 	}
 
 	.hero{
@@ -96,7 +95,7 @@
 	}
 
 	.wvcweather {
-		width: auto;
+		width: 100%;
 	}
 	
 	.join{
