--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,26 +1,26 @@
 @media only screen and (min-width: 64rem) {
 
+	#greetbanner{
+		font-size: larger;
+	}
+
+
+	.mainpic{
+		width: 100%;
+	}
+
+	nav{
+		width: 1150px;
+	}
+
 	.navigation {
 		display: flex;
 		padding: 0;
 		grid-column: 4;
 		margin: 0 auto;
-		max-width: 760px;
-		background-color: #863b3b;
-		border: 1px solid #863b3b;
+		background-color: #93ceff;
 		border-radius: 10px;
-		padding: .1em;
 	}
-
-
-	.mainpic {
-		width: 100%;
-		margin: auto;
-	}
-	#greetbanner{
-		font-size: larger;
-	}
-
 	.navigation li {
 		display: block; 
 		flex: 1 1 auto;
@@ -35,32 +35,38 @@
 	}
 	
 	.logo{
-		width: 225px;
+		width: 180px;
 	}
 
 	.facebook, .linkedIn{
-		width: 40px;
+		width: 35px;
 	}
 	
 	header{
 		display: flex;
-		justify-content: center;
-		align-items: center;
 	}
 
 	.title{
-		margin-left: 3em;
-		font-size: 100%;
+		font-size: 120%;
 	}
 
+
 	.wrapper{
-		grid-template-columns: repeat(4, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: repeat(3, 300px);
 	}
 
 	.hero{
 		grid-column: 2/4;
 		grid-row: 1/3;
+		border: 1px solid black;
+		margin: 0.5em;
+	}
+
+	.welcome{
+		top: 35px;
+		left:50px;
+		font-size: 40px;
 	}
 
 	.event{
@@ -95,7 +101,7 @@
 	}
 
 	.wvcweather {
-		width: 100%;
+		width: auto;
 	}
 	
 	.join{
@@ -108,8 +114,8 @@
 	}
 	
 	.joinBttn {
-		padding: 15px;
-		border-color: #e44646;
+		padding: 28px;
+		border-color: #467de4;
     	background-color: #eeee;
 		font-size: x-large;
 	}
@@ -122,24 +128,32 @@
 	.news{
 		grid-column: 2/4;
 		grid-row: 3;
+		
 	}
 
 	.newsTitle1{
 		font-size: x-large;
 	}
+
+	.newsTitle2{
+		padding: 30px;
+	}
 	
 	.joinchamber {
-		top: 150px;
-		right: 50px;
-		padding: 1.5rem;
-		font-size: x-large;
+		top: 460px;
+		right: 40px;
+		padding: 25px;
+		font-size: 24px;
 		font-weight: bold;
 	}
 
 	.spotlightbox{
 		grid-template-columns: 1fr;
 		grid-column: 4;
-		grid-row: 1/4;	
+		grid-row: 1/4;
+		margin: .5em;
+		padding: 20px;
+		gap: 10px;	
 	}
 
 	.spotlight1, .spotlight2, .spotlight3{
