update to responsive images

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -79,7 +79,7 @@
 	.joinBttn {
 		border: 3px solid;
 		border-radius: 25px;
-		border-color: #e44646;
+		border-color: #467de4;
 		background-color: #eeee;
 		font-size: large;
 		font-style: italic;
