--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -36,6 +36,7 @@
 	
 	.logo{
 		width: auto;
+		height: auto;
 	}
 
 	.facebook, .linkedIn{
@@ -59,7 +60,7 @@
 	.hero{
 		grid-column: 2/4;
 		grid-row: 1/3;
-		border: 1px solid black;
+		border: 2px solid rgb(129, 129, 129);
 		margin: 0.5em;
 	}
 
