--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -51,6 +51,8 @@
 		grid-template-columns: 1fr 1fr;
 		grid-column: 1/5;
 		grid-row: 3;
+		padding: 10px;
+
 	}
 
 	.spotlight1, .spotlight2{
@@ -95,17 +97,15 @@
 	}	
 
 	.event{
-		display: flex;
+		
 		grid-column: 1/3;
 		grid-row: 5;
 	}
 
-	.westfestlogo {
-		padding: 1em;
-	}
 
 	.eventDes {
 		font-size: larger;
+		padding: 0;
 	}
 
 	.weather{
@@ -140,5 +140,11 @@
 	}
 	.copyright{
 		font-size: medium;
+	}
+
+	.pro-img{
+		width: auto;
+		height: auto;
+
 	}
 }
