--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -406,7 +406,7 @@ nav {
     filter: blur(0em);
     transition: filter 1.5s;
 	transition: .5s;
-	width: 335spx;
+	width: 335px;
     height: 215px;
 	padding: 15px;
 }
