--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -537,15 +537,49 @@ label{
 
 /* ---------Directory Page CSS--------- */
 
+.menu{
+	font-size: 50px;
+    text-align: center;
+    padding: 15px;
+}
 
-.cards{
+
+.list{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 1em;
+	gap: 2em;
+}
+
+.list section{
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	background-color: rgb(235, 235, 235);
+	border: 1px solid darkgray;
+	box-shadow: 15px 15px 20px gray;
+	padding: 1em;
+	gap: 2em;
+	font-size: 10px;
+	width: auto;
+}
+
+
+.list section>img{
+	display: none;
+}
+
+
+.grid{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	justify-content: center;
 	padding: 4em;
 	gap: 5em;
 }
 
-section{
+.grid section{
 	display: grid;
 	justify-content: center;
 	text-align: center;
@@ -557,7 +591,7 @@ section{
 
 }
 
-section>img{
+.grid section>img{
 	width: auto;
 	height: 100px;
 	object-fit: contain;
@@ -565,6 +599,11 @@ section>img{
 	grid-row: 1;
 }
 
-section>p{
+.grid section>p{
 	font-size: 12px;
+}
+
+.grid p4{
+	display: none;
+	grid-column: 1;
 }
