--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -31,6 +31,11 @@
 		font-size: 80%;
 	}
 
+	.mainpic{
+		height: 100%;
+		object-fit: cover;
+	}
+
 	.wrapper{
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: repeat(5, 250px);
@@ -58,14 +63,6 @@
 	.spotlight1, .spotlight2{
 		width: auto;
 		height: 180px;
-	}
-
-	.spot1Des{
-		width: 180px;
-	}
-
-	.webdev{
-		padding: 0;
 	}
 
 	.join{
@@ -161,7 +158,7 @@
 		margin: 0;
 	}
 
-	form{
+	.join-form{
 		font-size: medium;
 		grid-template-columns: 1fr 1fr;
 		gap: 1em;
@@ -195,8 +192,12 @@
 	}
 
 	.list section{
+		display: flex;
+		gap: 2em;
 		padding: 4em;
 		font-size: 12px;
+		justify-content: left;
+		text-align: left;
 	}
 
 	.list p4{
