--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -145,23 +145,22 @@
 		margin: .5em;
 		padding: 20px;
 		gap: 10px;	
+		border: 1px solid rgb(129, 129, 129);
 	}
 
-	.spotlight1, .spotlight2, .spotlight3{
-		width: auto;
+	.spotlightbox div{
 		height: 250px;
+		width: 350px;
+		word-wrap: break-word;
+		background-color: rgb(235, 235, 235);
+	}
+
+	.spotlightbox img{
+		width: 230px;
 	}
 
 	.spotlightbox div:nth-child(3){
-		display: block;
-	}
-
-	.spot1Des{
-		width: min-content;
-	}
-
-	.webdev{
-		padding:20px;
+		display: grid;
 	}
 
 	footer{
@@ -196,10 +195,6 @@
 	.list  section{
 		font-size: 16px;
 		padding: 2em;
-	}
-
-	.list p1,p2,p3,p5{
-		padding: 25px;
 	}
 
 	.list{
