--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -13,7 +13,7 @@
 		padding: 0;
 		grid-column: 4;
 		margin: 1em;
-		background-color: #93ceff;
+		background-color: #8a8a8a;
 		border-radius: 10px;
 	}
 	.navigation li {
