--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -4,9 +4,11 @@
         padding: 0;
         grid-column: 4;
         margin: 1em;
+        padding: 5px;
         border-radius: 10px;
         border-bottom: 1px solid ;
         border-top: 1px solid;
+        gap: 1em;
     }
     .navigation li {
         display: block; 
@@ -14,7 +16,7 @@
     .navigation a {
         text-align: center;
         font-size: 25px;
-        margin: .5rem;
+        margin: 0;
     }
     .navigation li:first-child {
         display: none;
@@ -23,6 +25,27 @@
     .section1{
         display: flex;
         align-items: center;
+        margin-top: 5em;
+        margin-bottom: 8em;
+        padding: 20px 0px 20px 20px;
+    }
+
+    .weather-title{
+        margin-top: 5em;
+    }
+
+    .weather-strip{
+        margin-bottom: 5em;
+        font-size: 24px;
+    }
+
+    .tri-container{
+        margin-bottom: 10em;
+    }
+
+    .greeting-box{
+        
+        text-align: left;
     }
 
     .homepage-greeting-1{
@@ -32,27 +55,26 @@
     .homepage-greeting-2{
         font-size: 25px;
     }
-        
-   .homepage-reserve{
-    background: #2b2b2b;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    margin: 60px 150px 20px 150px;
-    padding: 15px;
-    text-decoration: none;
-    color: inherit;
+    
+   header{
+    padding: 20px;
    }
 
-   .homepage-reserve:hover{
-    transition: .5s;
-    padding: 25px;
+   .box3{
+    display: block;
+   }
+
+
+
+   /*--Reservation Page--*/
+   .reservation-form label, input, textarea, select{
     font-size: 20px;
-    color: white;
-   }
+  }
 
-
-
+  .thankyou-comment{
+    padding: 15em;
+    font-size: 24px;
+  }
 
 
 
